adding some new features

--- a/onlayn do'kon level 11/index.html
+++ b/onlayn do'kon level 11/index.html
@@ -15,15 +15,11 @@
         href="logo by Zuhriddin/favicon_io/favicon-16x16.png">
     <link rel="manifest"
         href="logo by Zuhriddin/favicon_io/site.webmanifest">
-
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
         rel="stylesheet">
-
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/level11/products.js" defer></script>
-    <script src="js/UI.js" defer></script>
-    <script src="js/main.js" defer></script>
+    <script type="module" src="js/main.js"></script>
 </head>
 
 <body class="bg-gray-100 text-gray-800 flex flex-col min-h-screen">
@@ -69,11 +65,9 @@
             </div>
         </div>
     </header>
-
     <div class="flex flex-1">
         <aside id="sidebar"
-            class="bg-slate-50 w-64 p-5 space-y-5 fixed inset-y-0 left-0 transform -translate-x-full transition-transform duration-300 ease-in-out
-                                   md:sticky md:top-16 md:translate-x-0 md:h-[calc(100vh-4rem)] md:z-auto z-40 overflow-y-auto shadow-lg md:shadow-none border-r border-slate-200">
+            class="bg-slate-50 w-64 p-5 space-y-5 fixed inset-y-0 left-0 transform -translate-x-full transition-transform duration-300 ease-in-out md:sticky md:top-16 md:translate-x-0 md:h-[calc(100vh-4rem)] md:z-auto z-40 overflow-y-auto shadow-lg md:shadow-none border-r border-slate-200">
             <h3
                 class="text-lg font-semibold text-gray-800 border-b border-slate-300 pb-3">
                 Kategoriyalar</h3>
@@ -89,7 +83,6 @@
                 </li>
             </ul>
         </aside>
-
         <div id="sidebar-overlay"
             class="fixed inset-0 bg-black bg-opacity-50 z-30 hidden md:hidden">
         </div>
@@ -105,11 +98,10 @@
                     <p class="text-lg sm:text-xl mb-6 sm:mb-8">Eng
                         sara futbolka va kepkalar to'plami!</p>
                     <a href="#products"
-                        class="bg-white text-indigo-600 font-semibold px-6 py-2.5 sm:px-8 sm:py-3 rounded-lg hover:bg-gray-200 transition duration-300 text-sm sm:text-base">Kolleksiyani
+                        class="bg-white text-indigo-600 font-semibold px-6 py-2.5 sm}px-8 sm:py-3 rounded-lg hover:bg-gray-200 transition duration-300 text-sm sm:text-base">Kolleksiyani
                         Ko'rish</a>
                 </div>
             </section>
-
             <section id="products">
                 <h2
                     class="text-2xl md:text-3xl font-semibold text-center mb-6 md:mb-10 text-gray-700">
@@ -120,7 +112,6 @@
             </section>
         </main>
     </div>
-
     <div id="productModal"
         class="modal fixed inset-0 bg-black bg-opacity-75 flex items-center justify-center p-4 opacity-0 invisible z-[100]">
         <div
@@ -130,7 +121,7 @@
                     class="text-2xl font-semibold text-gray-800">
                     Mahsulot Nomi</h3>
                 <button id="closeModalBtn"
-                    class="text-gray-500 hover:text-gray-700 text-2xl">&times;</button>
+                    class="text-gray-500 hover:text-gray-700 text-2xl">×</button>
             </div>
             <div class="md:flex md:space-x-6">
                 <div class="md:w-1/2 mb-4 md:mb-0">
@@ -150,22 +141,19 @@
                         class="text-3xl font-bold text-indigo-600 mb-6">
                         Narxi</p>
                     <button id="modalAddToCartBtn"
-                        class="w-full bg-indigo-600 text-white py-3 px-4 rounded-lg hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-opacity-50 font-medium">
-                        Savatchaga Qo'shish
-                    </button>
+                        class="w-full bg-indigo-600 text-white py-3 px-4 rounded-lg hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-opacity-50 font-medium">Savatchaga
+                        Qo'shish</button>
                 </div>
             </div>
         </div>
     </div>
-
     <footer class="bg-gray-800 text-white py-8 text-sm">
         <div class="container mx-auto px-6 text-center">
-            <p>&copy; <span id="currentYear">2025</span> Level11.
-                Barcha huquqlar himoyalangan.</p>
-            <p class="mt-1.5">Qarshi, O'zbekiston</p>
+            <p>© <span id="currentYear">2025</span> Level11. Barcha
+                huquqlar himoyalangan.</p>
+            <p class="mt-1.5">Tashkent, O'zbekiston</p>
         </div>
     </footer>
-
 </body>
 
 </html>
